--- a/StoreManagement/StoreManagement/StoreManagement.csproj
+++ b/StoreManagement/StoreManagement/StoreManagement.csproj
@@ -15,7 +15,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Models\Entities\" />
+    <Folder Include="Models\ViewModels\" />
   </ItemGroup>
 
 </Project>
